--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,19 @@
 * {
-    font-family: "Roboto", sans-serif;
-    font-size: 16px;
-    box-sizing: border-box;
-    margin:0;
-  } 
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
+    sans-serif;
+  -moz-osx-font-smoothing: grayscale;
+  -webkit-font-smoothing: antialiased;
+  margin: 0;
+}
+
+p {
+  line-height: 1.875rem;
+  font-size: 1rem;
+}
