--- a/client/src/pages/IndexPage/IndexPage.css
+++ b/client/src/pages/IndexPage/IndexPage.css
@@ -4,7 +4,7 @@
     flex-direction: column;
     height: 100vh;
     text-align: center;
-    background-color: #f4f5f7;
+    background-color: #a53db7;
   }
   
   .header {
