Handling GET Board

--- a/client/src/pages/BoardPage/BoardPage.css
+++ b/client/src/pages/BoardPage/BoardPage.css
@@ -1,5 +1,5 @@
 body{
-    background-image: url("../assets/images/background.jpg");
+    background-image: url('https://atlassianblog.wpengine.com/wp-content/uploads/2024/01/trello-like-a-pro-final-1.png');
     /* background-size: 60%; */
     background-size: cover;
   }
